# jcvi

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  CITATION.cff  LICENSE  MANIFEST.in  README.md  README.rst  __init__.py  __main__.py  build.py  env_osx64.yml  environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  setup_helper.py  setup_helpers.py  tests.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: Black.yml  build.yml  cff-validator.yml  claude-code-review.yml  claude.yml  pytest.yml  pythonpackage.yml  ruff.yml  update-citation-cff.yml
Dockerfiles/: Makefile  jcvi.dockerfile
algorithms/: catalog.py  colinearsort.py  ec.py  formula.py  fractionation.py  graph.py  lis.py  lpsolve.py  matrix.py  maxsum.py  ml.py  multitsp.py  pad.py  quota.py  reconstruct.py  supermap.py  synctsp.py  synteny.py  tandem.py  tsp.py
annotation/: __main__.py  ahrd.py  automaton.py  depth.py  evm.py  maker.py  pasa.py  qc.py  reformat.py  snp.py  stats.py  train.py
apps/: R.py  align.py  base.py  baseclean.py  biomart.py  blastfilter.py  blastplus.py  bowtie.py  bwa.py  cap3.py  cdhit.py  clc.py  command.py  console.py  emboss.py  entrez.py  fetch.py  gbsubmit.py  gmap.py  grid.py  gsnap.py  ks.py  last.py  lastz.py  mask.py  phylo.py  r.py  restriction.py  script.py  setop.py  softlink.py  softlinks.py  tasks.py  tesseract.py  touchlinks.py  uclust.py  uniprot.py  vecscreen.py
assembly/: __main__.py  allmaps.py  allpaths.py  amos.py  automaton.py  bambus.py  base.py  benchmark.py  bundle.py  ca.py  cap3.py  chic.c  chic.pyx  clr.py  coverage.py  deconvolute.py  finish.py  gaps.py  geneticmap.py  goldenpath.py  hic.py  kmer.py  kmers.py  meraculous.py  opticalmap.py  patch.py  pbjelly.py  postprocess.py  prepareCA.py  preprocess.py  qc.py  rnaseq.py  scaffold.py  scaffoldQC.py  sff.py  sim.py  simulate.py  soap.py  sopra.py  sspace.py  (+3 more)
compara/: blastfilter.py  catalog.py  fractionation.py  pad.py  quota.py  reconstruct.py  synfind.py  synteny.py
data/: colorchecker.txt
docker/: Makefile  jcvi.dockerfile
expression/: heterosis.py
formats/: __main__.py  ace.py  agp.py  base.py  bed.py  blast.py  btab.py  cas.py  castab.py  cblast.pyx  cdt.py  chain.py  contig.py  coords.py  excel.py  fasta.py  fastq.py  fileindex.py  fpc.py  genbank.py  gff.py  html.py  maf.py  obo.py  pdf.py  pnew.h  posmap.py  psl.py  pyblast.py  sam.py  sbt.py  sff.py  sizes.py  vcf.py
graphics/: __main__.py  align.py  assembly.py  base.py  blastplot.py  chromosome.py  coverage.py  dotplot.py  glyph.py  grabseeds.py  graph.py  heatmap.py  histogram.py  image.py  karyotype.py  landscape.py  logo.py  mummerplot.py  napus.py  paper.py  rdotplot.py  scaffolding.py  synteny.py  tree.py  wheel.py  whisker.py  xkcd.py
hli/: __main__.py  aws.py  str.py
jcvi/: __init__.py  _version.py
jcvi/algorithms/: __main__.py  ec.py  formula.py  graph.py  lis.py  lpsolve.py  matrix.py  maxsum.py  ml.py  supermap.py  tsp.py
jcvi/annotation/: __main__.py  ahrd.py  automaton.py  depth.py  evm.py  maker.py  pasa.py  qc.py  reformat.py  stats.py  train.py  trinity.py
jcvi/apps/: __main__.py  align.py  base.py  biomart.py  blastplus.py  bowtie.py  bwa.py  cap3.py  cdhit.py  console.py  emboss.py  fetch.py  gbsubmit.py  gmap.py  grid.py  ks.py  lastz.py  mask.py  pedigree.py  phylo.py  r.py  restriction.py  script.py  softlink.py  tesseract.py  uclust.py  uniprot.py  vecscreen.py  wga2ribbon.py
jcvi/assembly/: __main__.py  allmaps.py  allpaths.py  amos.py  automaton.py  bambus.py  base.py  ca.py  chic.c  chic.pyx  coverage.py  gaps.py  geneticmap.py  goldenpath.py  hic.py  kmer.py  meraculous.py  opticalmap.py  patch.py  pbjelly.py  postprocess.py  preprocess.py  sim.py  soap.py  sspace.py  syntenypath.py  unitig.py
jcvi/compara/: __main__.py  base.py  blastfilter.py  catalog.py  fractionation.py  ks.py  pad.py  pedigree.py  phylogeny.py  quota.py  reconstruct.py  synfind.py  synteny.py
jcvi/formats/: __main__.py  ace.py  agp.py  base.py  bed.py  blast.py  btab.py  cblast.c  cblast.pyx  cdt.py  chain.py  contig.py  coords.py  excel.py  fasta.py  fastq.py  fpc.py  genbank.py  gff.py  html.py  maf.py  obo.py  paf.py  pdf.py  posmap.py  psl.py  sam.py  sbt.py  sizes.py  vcf.py
jcvi/graphics/: __main__.py  align.py  assembly.py  base.py  blastplot.py  chromosome.py  coverage.py  dotplot.py  glyph.py  grabseeds.py  graph.py  heatmap.py  histogram.py  karyotype.py  landscape.py  logo.py  mummerplot.py  ribbon.py  synteny.py  table.py  tree.py  wheel.py  whisker.py
jcvi/projects/: __main__.py  age.py  alfalfa.py  allmaps.py  bites.py  heterosis.py  ies.py  jcvi.py  misc.py  napus.py  pineapple.py  pistachio.py  str.py  sugarcane.py  synfind.py  tgbs.py  vanilla.py
jcvi/utils/: __main__.py  aws.py  brewer2mpl.py  cbook.py  console.py  counter.py  db.py  ez_setup.py  grouper.py  iter.py  natsort.py  orderedcollections.py  progressbar.py  range.py  table.py  taxonomy.py  webcolors.py
jcvi/variation/: __main__.py  cnv.py  deconvolute.py  delly.py  impute.py  phase.py  snp.py  str.py  tassel.py
papers/: allmaps.py  bites.py  misc.py
projects/: __main__.py  age.py  allmaps.py  heterosis.py  ies.py  misc.py  napus.py  pineapple.py  pistachio.py  str.py  synfind.py  tgbs.py
scaffold/: base.py
scaffoldQC/: Astat.py  posmap.py  scaffoldQC.py
src/jcvi/: __init__.py  cli.py  version.py
temp/: environment.yml
tests/: config.py  test_cli.py  test_compara.py  test_extra.py  test_formats.py  test_scripts.py
tests/algorithms/: test_ec.py  test_formula.py  test_lis.py  test_lpsolve.py  test_matrix.py  test_maxsum.py  test_tsp.py
tests/apps/: test_base.py  test_console.py  test_fetch.py
utils/: aws.py  cbook.py  counter.py  data.py  db.py  ez_setup.py  grouper.py  iter.py  misc.py  natsort.py  orderedcollections.py  ordereddict.py  overlap.py  range.py  sybase.py  table.py  taxonomy.py  webcolors.py
variation/: __main__.py  cnv.py  deconvolute.py  delly.py  impute.py  phase.py  snp.py  str.py  tassel.py  vcf.py
(+277 files in other folders)
