[metadata]
name = jcvi
version = v1.2.18+8.g5e28b27e.dirty
author = Haibao Tang, Vivek Krishnakumar, Jingping Li
author_email = tanghaibao@gmail.com
license = BSD
description = Python utility libraries on genome assembly, annotation and comparative genomics
url = http://github.com/tanghaibao/jcvi
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Bio-Informatics

[versioneer]
vcs = git
style = pep440
versionfile_source = jcvi/_version.py
versionfile_build = jcvi/_version.py
tag_prefix =

[options]
packages =
    jcvi
    jcvi.formats
    jcvi.variation
    jcvi.compara
    jcvi.assembly
    jcvi.projects
    jcvi.algorithms
    jcvi.annotation
    jcvi.utils
    jcvi.graphics
    jcvi.apps
    jcvi.utils.data
zip_safe = False
setup_requires = setuptools>=18.0; cython
install_requires =
    CrossMap
    PyPDF2
    PyYAML
    biopython
    boto3
    brewer2mpl
    coveralls
    cython
    deap
    ete3
    ftpretty
    gffutils
    goatools
    graphviz
    jinja2
    matplotlib
    more-itertools
    natsort
    networkx
    numpy
    ortools
    pybedtools
    pytest
    rich
    scikit-image
    scipy
    seaborn
    webcolors
include_package_data = True
tests_require = pytest; pytest-cov; pytest-benchmark

[options.package_data]
jcvi.utils.data = *.*
